对QQ登录支持

--- a/src/main/resources/auth.properties
+++ b/src/main/resources/auth.properties
@@ -1,3 +1,7 @@
 auth.qq.appid=
 auth.qq.appkey=
-auth.qq.fallback=http://mxzero.top/oauth2/qq_fallback
+auth.qq.fallback=
+auth.qq.authorizeUrl=https://graph.qq.com/oauth2.0/authorize
+auth.qq.accessTokenUrl=https://graph.qq.com/oauth2.0/token
+auth.qq.openIdUrl=https://graph.qq.com/oauth2.0/me
+auth.qq.userinfoUrl=https://graph.qq.com/user/get_user_info
