--- a/src/main/resources/auth.properties
+++ b/src/main/resources/auth.properties
@@ -1,13 +1,13 @@
-auth.qq.appid=
-auth.qq.appkey=
-auth.qq.fallback=
+auth.qq.appid=1
+auth.qq.appkey=1
+auth.qq.fallback=1
 auth.qq.authorizeUrl=https://graph.qq.com/oauth2.0/authorize
 auth.qq.accessTokenUrl=https://graph.qq.com/oauth2.0/token
 auth.qq.openIdUrl=https://graph.qq.com/oauth2.0/me
 auth.qq.userinfoUrl=https://graph.qq.com/user/get_user_info
-auth.weibo.appid=
-auth.weibo.appkey=
-auth.weibo.fallback=
+auth.weibo.appid=1
+auth.weibo.appkey=1
+auth.weibo.fallback=1
 auth.weibo.authorizeUrl=https://api.weibo.com/oauth2/authorize
 auth.weibo.accessTokenUrl=https://api.weibo.com/oauth2/access_token
 auth.weibo.uidUrl=https://api.weibo.com/2/account/get_uid.json
